# contract-sentry

./: .env.example  .gitignore  ONBOARDING_READY.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.analyzer  Dockerfile.fuzzer  Dockerfile.worker  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/analyzers/: base.py  echidna_analyzer.py  medusa_analyzer.py  mythril_analyzer.py  slither_analyzer.py
backend/app/api/: deps.py
backend/app/core/: cache.py  campaign_generator.py  compile_check.py  logging.py  metrics.py  notifications.py  poc_generator.py  report_generator_ai.py  sandbox.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  domain.py
backend/app/reporters/: aggregator.py  generator.py
backend/app/schemas/: __init__.py  auth.py  campaign.py  contract.py  enums.py  finding.py  job.py  report.py  simulation.py
backend/app/simulators/: base.py  fork_simulator.py  foundry_simulator.py
backend/app/workers/: celery_app.py  dispatcher.py
backend/tests/: conftest.py  test_aggregator.py  test_analyzers.py  test_api_contracts.py  test_report_generator.py
backend/tests/contract/: test_api_contract.py  test_finding_contract.py  test_job_contract.py  test_simulation_templates.py
backend/tests/integration/: test_analysis_flow.py  test_auth.py  test_dynamic_analysis.py  (+4 more)
k8s/: api.yaml  (+8 more)
(+93 files in other folders)
